feat: migrate to kotlin (#8)
* feat: migrate to kotlin

* fix: add test back in

* fix: fix and cleanup project

* refactor: refactor PlayerSessionRepository and PlayerPresenceGrpcService for improved session management

---------

Co-authored-by: ItsKev <kevin.huber@hotmail.com>